Remove overflow da modal (Ref.: no issue)

--- a/src/modules/Components/components/mc-modal/style.css
+++ b/src/modules/Components/components/mc-modal/style.css
@@ -22,7 +22,7 @@
     margin: 0 1rem;
     max-height: 90%;
     min-width: 200px;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     position: relative;
 }
 
